--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ rvm:
 services:
   - postgresql
 before_script:
-- psql -c 'create database job_basket_test;' -U postgres
+- rake db:create && rake db:migrate; -U postgres
 
 script: bundle exec rspec spec
