--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ rvm:
 services:
   - postgresql
 before_script:
-- rake db:create && rake db:migrate; -U postgres
+- rake db:create && rake db:migrate
 
 script: bundle exec rspec spec
